--- a/data-analyst.html
+++ b/data-analyst.html
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -139,11 +139,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mediamolecule/jobs/4495997002'>Job Application for Data Analyst at Media Molecule</a></h5> 
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -187,7 +187,7 @@
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -199,7 +199,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -211,7 +211,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -251,7 +251,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698372947-production-data-analyst-h-f'>Ubisoft Production Data Analyst - H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698372947-production-data-analyst-h-f'>Ubisoft Production Data Analyst - H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -259,7 +259,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light">Australia, VIC, Southbank</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -319,7 +319,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698307417-vice-president-director-data-analysis'>Publicis Groupe Vice President Director, Data & Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -415,7 +415,7 @@
 <p><span class="badge badge-light">Australia  Paris</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -436,7 +436,7 @@
 <p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
 achieve our mission to quantify user interactions with government services.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
+<h5><a href='https://tiaa.referrals.selectminds.com/jobs/datastage-systems-analyst-2942'>DataStage Systems Analyst - TIAA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
