--- a/android-developer.html
+++ b/android-developer.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698473117-android-developer'>Devoteam Android developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698473117-android-developer'>Devoteam Android developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -150,7 +150,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://supermercato24.recruitee.com/o/android-developer-2'>
       Android Developer - Supermercato24
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -254,7 +254,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.freshersworld.com/jobs/android-application-developer-jobs-in-surat-softstorm-technosys-pvt-ltd-727665?src=mktld'>Android application developer Jobs in Surat - SoftStorm Technosys Pvt. Ltd. 16 Oct 2019</a></h5> 
+<h5><a href='https://www.freshersworld.com/jobs/android-application-developer-jobs-in-surat-softstorm-technosys-pvt-ltd-727665?src=mktld'>Android application developer Jobs in Surat - SoftStorm Technosys Pvt. Ltd. 16 Oct 2019</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -288,7 +288,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ParkhyaSolutionsPvtLtd/743999697701217-android-developer'>Parkhya Solutions Pvt Ltd Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -296,7 +296,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
+<h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... As an Android Developer you will be part of our Platform Development team, 
 where you will design and build the next generation of our mobile applications.</p>
@@ -370,7 +370,7 @@ Experienced Android Application Developer at Yor Labs Inc in Portland | Android 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
 Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -424,7 +424,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">United States  Plano, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200283-android-developer'>Booking.com Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bookingcom1/743999697200283-android-developer'>Booking.com Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai Shanghai</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
